--- a/Face_Recognition_for_the_Happy_House_v2.ipynb
+++ b/Face_Recognition_for_the_Happy_House_v2.ipynb
@@ -34,14 +34,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "-DFr5cHPyBKq",
-        "outputId": "27e8a8fb-a8b7-485b-a43d-ed8912436bff",
-        "collapsed": true
+        "outputId": "27e8a8fb-a8b7-485b-a43d-ed8912436bff"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Colab only includes TensorFlow 2.x; %tensorflow_version has no effect.\n",
             "Archive:  weights.zip\n",
@@ -304,8 +304,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2.17.0\n"
           ]
@@ -339,9 +339,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!ls /content"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -349,15 +347,17 @@
         "id": "bl8PgnpNWGRw",
         "outputId": "67121a0a-79a1-4b34-dada-f220da843b81"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "fr_utils.py  images  inception_blocks_v2.py  __pycache__  sample_data  weights\tweights.zip\n"
           ]
         }
+      ],
+      "source": [
+        "!ls /content"
       ]
     },
     {
@@ -436,8 +436,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Total Params: 3743280\n"
           ]
@@ -589,8 +589,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "loss = 350.02734\n"
           ]
@@ -709,17 +709,17 @@
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
-        "id": "9wz8eTUQekYZ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
+        "id": "9wz8eTUQekYZ",
         "outputId": "8b927d20-0adf-4098-b6b8-a97db0643a8c"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 7s/step\n",
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 38ms/step\n",
@@ -754,19 +754,17 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "EncQyDfNggQr"
+      },
       "source": [
         "# ***Add to the database***\n",
         "question 6 answers"
-      ],
-      "metadata": {
-        "id": "EncQyDfNggQr"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "database[\"fazla\"] = img_to_encoding(\"images/fazla.jpg\", FRmodel)"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -774,15 +772,17 @@
         "id": "yFS0pNGKgdOx",
         "outputId": "509d680c-86ed-4dd6-98fa-f57dbf5c7b52"
       },
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 19ms/step\n"
           ]
         }
+      ],
+      "source": [
+        "database[\"fazla\"] = img_to_encoding(\"images/fazla.jpg\", FRmodel)"
       ]
     },
     {
@@ -870,22 +870,22 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 18ms/step\n",
             "It's younes, welcome home!\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(0.6671399, True)"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 12
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -916,8 +916,11 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zG1gz0dWeaAo"
+      },
       "source": [
-        "## ***checking mufeel***\n",
+        "## ***checking Fazla***\n",
         "\n",
         "question 7 answers\n",
         "\n",
@@ -926,16 +929,11 @@
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "zG1gz0dWeaAo"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "verify(\"images/clone1.jpg\", \"fazla\", database, FRmodel)"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -943,33 +941,33 @@
         "id": "D8nlUfbOfWBg",
         "outputId": "cef56efc-24f2-4653-a1fb-f21c0c14745c"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 32ms/step\n",
             "It's fazla, welcome home!\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(0.4591693, True)"
             ]
           },
+          "execution_count": 13,
           "metadata": {},
-          "execution_count": 13
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "verify(\"images/clone1.jpg\", \"fazla\", database, FRmodel)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "verify(\"images/clone1.jpg\", \"younes\", database, FRmodel)"
-      ],
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -977,33 +975,33 @@
         "id": "aNbjUL7Xf0kO",
         "outputId": "8495c5a4-19ec-4d3c-e913-22b26712bbed"
       },
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 34ms/step\n",
             "It's not younes, please go away\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(1.0055739, False)"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 14
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "verify(\"images/clone1.jpg\", \"younes\", database, FRmodel)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "output = who_is_it(\"images/clone1.jpg\", database, FRmodel)"
-      ],
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1011,24 +1009,23 @@
         "id": "pjXXoELfg4sS",
         "outputId": "1ce251b9-1b70-4e4a-bb61-d15631b96135"
       },
-      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 19ms/step\n",
             "it's fazla, the distance is 0.4591693\n"
           ]
         }
+      ],
+      "source": [
+        "output = who_is_it(\"images/clone1.jpg\", database, FRmodel)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#dictionary contains the L2 distance between target image encoding and database embeddings of other images\n",
-        "output[2]"
-      ],
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1036,10 +1033,8 @@
         "id": "rG4otMSLh6iB",
         "outputId": "95874213-b813-4f9a-99f3-3b56feb55c12"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'danielle': 0.925112,\n",
@@ -1057,9 +1052,14 @@
               " 'fazla': 0.4591693}"
             ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "#dictionary contains the L2 distance between target image encoding and database embeddings of other images\n",
+        "output[2]"
       ]
     },
     {
@@ -1085,22 +1085,22 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 19ms/step\n",
             "It's not kian, please go away\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(0.8586889, False)"
             ]
           },
+          "execution_count": 19,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1234,8 +1234,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 19ms/step\n",
             "it's bertrand, the distance is 0.4680736\n"
@@ -1271,15 +1271,14 @@
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
-        "id": "plUo5rT5P9ql",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "plUo5rT5P9ql",
         "outputId": "f81e27d7-385d-48ce-dd4a-4e88655bb582"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'danielle': 1.0875257,\n",
@@ -1297,8 +1296,9 @@
               " 'fazla': 0.9563317}"
             ]
           },
+          "execution_count": 21,
           "metadata": {},
-          "execution_count": 21
+          "output_type": "execute_result"
         }
       ],
       "source": [
